--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,21 +6,37 @@
     <link rel="stylesheet" href="style.css">
     <title>Jogo do Jarro</title>
 </head>
-<body>
-    <div class="Envelope">
+<body id = "CORPO">
+    <div class="Envelope" id="ENVELOPE">
         <div class="Esquerda">
             <img id="Torneira" src="/views/img/faucet-2515657_640.png" alt="" ondragover="allowDrop(event)" draggable="false">
         </div>
         <div class="Meio">
-            <img id="Jarro1" src="/views/img/copoVazio.png" alt="" draggable="true">
-            <img id="Jarro2" src="/views/img/copoVazio.png" alt="" draggable="true">
+            <table>
+                <tr>
+                    <th id="MaxJarro1">Qnt max = </th>
+                    <th id="MaxJarro2">Qnt max = </th>
+                </tr>
+                <tr>
+                    <td><img id="Jarro1" src="/views/img/copoVazio.png" alt="" draggable="true" ondragover="allowDrop(event)"></td>
+                    <td><img id="Jarro2" src="/views/img/copoVazio.png" alt="" draggable="true" ondragover="allowDrop(event)"></td>
+                </tr>
+                <tr>
+                    <th id="AtualJarro1">Qnt atual = </th>
+                    <th id="AtualJarro2">Qnt atual = </th>
+                </tr>
+
+
+            </table>
+
+
         </div>
         <div class="Direita">
             <img id="Ralo" src="/views/img/drain-2454608_640.jpg" alt="" ondragover="allowDrop(event)" draggable="false">
         </div>
     </div>
 
-    <div id="AAA">AAAAAAAAAAAA</div>
+    <p id="AAA"></p>
 
 
     <script src="../controllers/controllerImg.js"></script>
@@ -29,4 +45,5 @@
     <script src="../models/ClassTorneira.js"></script>
     <script src="../controllers/controllerDragAndDrog.js"></script>
 </body>
+
 </html>
