:bug: troca caminho das imgs

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,7 @@
 <body id = "CORPO">
     <div class="Envelope" id="ENVELOPE">
         <div class="Esquerda">
-            <img id="Torneira" src="/views/img/faucet-2515657_640.png" alt="" ondragover="allowDrop(event)" draggable="false">
+            <img id="Torneira" src="img/faucet-2515657_640.png" alt="" ondragover="allowDrop(event)" draggable="false">
         </div>
         <div class="Meio">
             <table>
@@ -18,8 +18,8 @@
                     <th id="MaxJarro2">Qnt max = </th>
                 </tr>
                 <tr>
-                    <td><img id="Jarro1" src="/views/img/copoVazio.png" alt="" draggable="true" ondragover="allowDrop(event)"></td>
-                    <td><img id="Jarro2" src="/views/img/copoVazio.png" alt="" draggable="true" ondragover="allowDrop(event)"></td>
+                    <td><img id="Jarro1" src="img/copoVazio.png" alt="" draggable="true" ondragover="allowDrop(event)"></td>
+                    <td><img id="Jarro2" src="img/copoVazio.png" alt="" draggable="true" ondragover="allowDrop(event)"></td>
                 </tr>
                 <tr>
                     <th id="AtualJarro1">Qnt atual = </th>
@@ -32,7 +32,7 @@
 
         </div>
         <div class="Direita">
-            <img id="Ralo" src="/views/img/drain-2454608_640.jpg" alt="" ondragover="allowDrop(event)" draggable="false">
+            <img id="Ralo" src="img/drain-2454608_640.jpg" alt="" ondragover="allowDrop(event)" draggable="false">
         </div>
     </div>
 
