:art: Adiciona Style a tela de Vitoria Adiciona uma Div para a tela de Vitoria

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -35,8 +35,11 @@
             <img id="Ralo" src="img/drain-2454608_640.jpg" alt="" ondragover="allowDrop(event)" draggable="false">
         </div>
     </div>
-
-    <p id="AAA"></p>
+    
+    <div class="Vitoria">
+        <h1 id="AAA"></h1>
+    </div>
+    
 
 
     <script src="../controllers/controllerImg.js"></script>
