:pencil2: Adiciona texto explicativo sobre como ganhar o jogo

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,6 +7,7 @@
     <title>Jogo do Jarro</title>
 </head>
 <body id = "CORPO">
+    <h2 class="Explicacao">Para ganhar o jogo, um dos 2 Jarros precisa ter 4 litros de água.</h2>
     <div class="Envelope" id="ENVELOPE">
         <div class="Esquerda">
             <img id="Torneira" src="img/faucet-2515657_640.png" alt="" ondragover="allowDrop(event)" draggable="false">
