--- a/src/views/style.css
+++ b/src/views/style.css
@@ -4,4 +4,7 @@
 img{max-width: 300px;max-height: 300px;}
 
 .Explicacao{width: 100%;text-align: center;}
-.Vitoria{width: 100%; height: 500px; display: flex; justify-content: center; align-items: center;}
+#Vitoria{width: 100%; height: 500px; display: none; justify-content: center; align-items: center; flex-direction: column;}
+    #Vitoria div{margin: 15px;}
+.Btn{padding: 10px; background-color: blue; color: white; font-size: larger; border: 0; border-style: none; box-shadow: -3px 5px 5px #666666;}    
+    .Btn:hover{background-color: rgb(0, 225, 255); color: black;}
