:rocket: Adicona botao "voltar ao jogo" :art: Melhora a estrutura da div Vitoria

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -37,8 +37,14 @@
         </div>
     </div>
     
-    <div class="Vitoria">
-        <h1 id="AAA"></h1>
+    <div id="Vitoria">
+        <div>
+            <h1 id="AAA"></h1>
+        </div>
+        <div>
+            <button class="Btn" onclick="location.reload()">Volte ao jogo</button>
+        </div>
+        
     </div>
     
 
